# rxmatch

./: .env.local.example  .gitignore  catalogue_analyses_exemple.csv  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx  proxy.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  phone_server.rs
src/actions/: auth.ts
src/app/: globals.css  layout.tsx
src/app/(auth)/: layout.tsx
src/app/(dashboard)/: layout.tsx
src/components/auth/: InviteForm.tsx  LoginForm.tsx  SignupForm.tsx
src/components/catalogue/: CataloguePage.tsx  ImportWizard.tsx
src/components/dashboard/: DashboardPage.tsx
src/components/journal/: JournalPage.tsx
src/components/layout/: ShellLayout.tsx  Sidebar.tsx
src/components/prescriptions/: ConfidenceBadge.tsx  DevicePicker.tsx  HistoryBadge.tsx  ImageViewer.tsx  MaskingCanvas.tsx  OrdonnanceUploader.tsx  PrescriptionList.tsx  ReviewScreen.tsx
src/hooks/: useAuth.ts
src/i18n/: request.ts
src/lib/: api.ts  audit.ts  gemini.ts  matching.ts  supabase.ts  tauri.ts
src/messages/: fr.json
src/types/: extraction.ts  index.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 001_fresh_schema.sql  001_initial_schema.sql  002_admin_rls.sql  002_invitations.sql  003_functions.sql  003_storage_policies.sql  004_admin_catalogue_writes.sql  004_decision_history_upsert.sql
(+41 files in other folders)
