[package]
name = "rx-match"
version = "0.1.0"
description = "RxMatch — Lab prescription scanner and test recognition"
authors = ["RxMatch"]
license = ""
repository = ""
default-run = "rx-match"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rx_match_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rx-match"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-fs      = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-http    = "2"
tauri-plugin-shell   = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
mac_address  = "1.1"
tokio        = { version = "1", features = ["full"] }
chrono       = { version = "0.4", features = ["serde"] }

# Lightweight HTTP server for phone communication
tiny_http    = "0.12"

[features]
default     = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic   = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
